# spotify-covers

./: .gitignore  README.md  pyproject.toml
config/: covers.toml
spotify_covers/: covers.py
tests/: test_spotify_covers.py
