[tool.poetry]
name = "spotify-covers"
version = "0.1.0"
description = ""
authors = ["gordonjb <gordonjb@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^7.1.2"
tomlkit = "^0.6.0"
pathvalidate = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
rope = "^0.17.0"

[tool.poetry.scripts]
covers = "spotify_covers.covers:main"
show = "spotify_covers.covers:show"
test1 = "spotify_covers.covers:test1"
test1-s = "spotify_covers.covers:test1_solid"
test2 = "spotify_covers.covers:test2"
test3 = "spotify_covers.covers:test3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

